reformat with Palantir 120 column, lamda happy